--- a/template/navbar.html
+++ b/template/navbar.html
@@ -8,23 +8,23 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-        <li class="nav-item">
+        <li class="nav-item ">
           <a class="nav-link" href="{% url 'shop:allProdCat' %}" STYLE="color:green"><B><i class="fa-solid fa-house"></i>HOME</B></a>
         </li>
         <li class="nav-item dropdown {% if 'shop' in request.path %} active {% endif %}">
-          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-            CATEGORIES
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false" STYLE="color:green">
+            <strong> CATEGORIES</strong>
           </a>
           <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <li><a class="dropdown-item" href="{% url 'shop:allProdCat' %}">All Products</a></li>
+            <li><a class="dropdown-item btn btn-success" href="{% url 'shop:allProdCat' %}">All Products</a></li>
             {% for cat in links %}
-            <li><a class="dropdown-item" href="{{cat.get_url}}">{{cat.name}}</a></li>
+            <li><a class="dropdown-item btn btn-success" href="{{cat.get_url}}">{{cat.name}}</a></li>
             {% endfor %}
           </ul>
         </li>
         {% if item_count > 0 %}
         <li class="nav-item">
-          <a class="nav-link" href="{% url 'cart:cart_detail' %}" > <i class="fa-solid fa-cart-shopping"></i>{{item_count}} </a>
+          <a class="nav-link" href="{% url 'cart:cart_detail' %}" STYLE="color:green"> <i class="fa-solid fa-cart-shopping"></i>{{item_count}} </a>
         </li>
         {% endif %}
       </ul>
